--- a/.github/workflows/build-queues.yaml
+++ b/.github/workflows/build-queues.yaml
@@ -1,17 +1,20 @@
-# Copyright 2022, 2023 Oracle Corporation and/or its affiliates.
+# Copyright 2024 Oracle Corporation and/or its affiliates.
 # Licensed under the Universal Permissive License v 1.0 as shown at
 # https://oss.oracle.com/licenses/upl.
 
 # ---------------------------------------------------------------------------
-# Coherence Go Client GitHub Actions test examples against v22.06 versions
+# Coherence Go Client GitHub Actions CI build Queues
 # ---------------------------------------------------------------------------
-name: CI-Examples v22.06
+name: CI Queues
 
 on:
   workflow_dispatch:
   push:
     branches:
       - '*'
+  schedule:
+    # Every day at midnight
+    - cron: '0 0 * * *'
 
 jobs:
   build:
@@ -20,8 +23,8 @@ jobs:
       fail-fast: false
       matrix:
         coherenceVersion:
-          - 22.06.8-SNAPSHOT
-          - 22.06.7
+          - 24.03
+          - 24.03.1-SNAPSHOT
         go-version:
           - 1.19.x
           - 1.20.x
@@ -38,13 +41,12 @@ jobs:
     - name: Get Docker Images
       shell: bash
       run: |
-        docker pull gcr.io/distroless/java:11
-        uname -a
+        docker pull gcr.io/distroless/java17
 
-    - name: Set up JDK
+    - name: Set up JDK 17 for Build
       uses: actions/setup-java@v4
       with:
-        java-version: '11'
+        java-version: '17'
         distribution: 'zulu'
 
     - name: Cache Go Modules
@@ -67,17 +69,13 @@ jobs:
       with:
         go-version: '${{ matrix.go-version }}'
 
-    - name: Copyright Check
-      shell: bash
-      run: |
-        make copyright
-
-    - name: Verify Examples
+    - name: E2E Queue Tests
+      env:
+        COH_VERSION: ${{ matrix.coherenceVersion }}
       shell: bash
       run: |
         go get google.golang.org/grpc/cmd/protoc-gen-go-grpc@v1.3.0
-        COHERENCE_VERSION=${{ matrix.coherenceVersion }} PROFILES=,-jakarta,javax make clean generate-proto build-test-images test-cluster-startup test-examples
-        make test-cluster-shutdown || true
+        COHERENCE_BASE_IMAGE=gcr.io/distroless/java17 INCLUDE_LONG_RUNNING=true PROFILES=,jakarta,-javax COHERENCE_VERSION=$COH_VERSION make clean generate-proto build-test-images test-e2e-standalone-queues
 
     - uses: actions/upload-artifact@v3
       if: failure()
