--- a/.github/workflows/resolver-compatability-tests.yaml
+++ b/.github/workflows/resolver-compatability-tests.yaml
@@ -22,9 +22,7 @@ jobs:
         coherenceVersion:
           - 22.06.7
           - 22.06.8
-          - 22.06.9-SNAPSHOT
           - 24.03
-          - 24.03.1-SNAPSHOT
         go-version:
           - 1.19.x
           - 1.20.x
@@ -75,7 +73,7 @@ jobs:
         cohctl monitor health -n localhost:7574 -T 40 -w
         make clean test-clean test-resolver
         cohctl stop cluster grpc-cluster -y
-        cohctl remove cluster gprc-cluster -y
+        cohctl remove cluster grpc-cluster -y
 
     - uses: actions/upload-artifact@v4
       if: failure()
