--- a/.github/workflows/build-v1.yaml
+++ b/.github/workflows/build-v1.yaml
@@ -37,7 +37,7 @@ jobs:
     - name: Get Docker Images
       shell: bash
       run: |
-        docker pull gcr.io/distroless/java:17
+        docker pull gcr.io/distroless/java17
         uname -a
 
     - name: Set up JDK
