--- a/test/utils/docker-compose-2-members.yaml
+++ b/test/utils/docker-compose-2-members.yaml
@@ -1,8 +1,7 @@
-# Copyright 2023 Oracle Corporation and/or its affiliates.
+# Copyright 2023, 2024 Oracle Corporation and/or its affiliates.
 # Licensed under the Universal Permissive License v 1.0 as shown at
 # https://oss.oracle.com/licenses/upl.
 
-version: "3.5"
 services:
   coherence1:
     hostname: server1
