--- a/java/coherence-go-test/src/main/resources/META-INF/type-aliases.properties
+++ b/java/coherence-go-test/src/main/resources/META-INF/type-aliases.properties
@@ -1,5 +1,5 @@
 #
-# Copyright (c) 2023 Oracle and/or its affiliates.
+# Copyright (c) 2023, 2024 Oracle and/or its affiliates.
 # Licensed under the Universal Permissive License v 1.0 as shown at
 # https://oss.oracle.com/licenses/upl.
 #
@@ -7,3 +7,4 @@
 
 test.customer=com.oracle.coherence.go.testing.Customer
 test.address=com.oracle.coherence.go.testing.Address
+test.longEntryProcessor=com.oracle.coherence.go.testing.LongEntryProcessor
