--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -69,6 +69,7 @@ jobs:
       shell: bash
       run: |
         docker pull gcr.io/distroless/java17
+        docker pull gcr.io/distroless/java:11
 
     - name: Copyright Check
       shell: bash
