--- a/.github/workflows/examples-jakarta-v1.2.2.yaml
+++ b/.github/workflows/examples-jakarta-v1.2.2.yaml
@@ -4,6 +4,7 @@
 
 # ---------------------------------------------------------------------------
 # Coherence Go Client GitHub Actions test examples against v23.03+
+# and v1.2.2 client
 # ---------------------------------------------------------------------------
 name: CI-Examples Jakarta
 
@@ -71,6 +72,7 @@ jobs:
     - name: Verify Examples
       shell: bash
       run: |
+        git checkout v1.2.2
         go get google.golang.org/grpc/cmd/protoc-gen-go-grpc@v1.3.0
         COHERENCE_BASE_IMAGE=gcr.io/distroless/java17 COHERENCE_VERSION=${{ matrix.coherenceVersion }} PROFILES=,jakarta,-javax make clean generate-proto build-test-images test-cluster-startup test-examples
         make test-cluster-shutdown || true
