--- a/.github/workflows/examples-v1.2.2.yaml
+++ b/.github/workflows/examples-v1.2.2.yaml
@@ -1,11 +1,12 @@
-# Copyright 2023, 2024 Oracle Corporation and/or its affiliates.
+# Copyright 2022, 2024 Oracle Corporation and/or its affiliates.
 # Licensed under the Universal Permissive License v 1.0 as shown at
 # https://oss.oracle.com/licenses/upl.
 
 # ---------------------------------------------------------------------------
-# Coherence Go Client GitHub Actions test examples against v23.03+
+# Coherence Go Client GitHub Actions test examples against v22.06 versions
+# and v1.2.2 client
 # ---------------------------------------------------------------------------
-name: CI-Examples Jakarta
+name: CI-Examples v22.06 - v1.2.2
 
 on:
   workflow_dispatch:
@@ -20,8 +21,8 @@ jobs:
       fail-fast: false
       matrix:
         coherenceVersion:
-          - 24.09
-          - 24.09.1-SNAPSHOT
+          - 22.06.11-SNAPSHOT
+          - 22.06.10
         go-version:
           - 1.19.x
           - 1.20.x
@@ -39,13 +40,13 @@ jobs:
     - name: Get Docker Images
       shell: bash
       run: |
-        docker pull gcr.io/distroless/java17
+        docker pull gcr.io/distroless/java:11
         uname -a
 
     - name: Set up JDK
       uses: actions/setup-java@v4
       with:
-        java-version: '17'
+        java-version: '11'
         distribution: 'zulu'
 
     - name: Cache Go Modules
@@ -71,8 +72,9 @@ jobs:
     - name: Verify Examples
       shell: bash
       run: |
+        git checkout v1.2.2
         go get google.golang.org/grpc/cmd/protoc-gen-go-grpc@v1.3.0
-        COHERENCE_BASE_IMAGE=gcr.io/distroless/java17 COHERENCE_VERSION=${{ matrix.coherenceVersion }} PROFILES=,jakarta,-javax make clean generate-proto build-test-images test-cluster-startup test-examples
+        COHERENCE_VERSION=${{ matrix.coherenceVersion }} PROFILES=,-jakarta,javax make clean generate-proto build-test-images test-cluster-startup test-examples
         make test-cluster-shutdown || true
 
     - uses: actions/upload-artifact@v4
