--- a/.github/workflows/examples-jakarta-v1.2.2.yaml
+++ b/.github/workflows/examples-jakarta-v1.2.2.yaml
@@ -6,7 +6,7 @@
 # Coherence Go Client GitHub Actions test examples against v23.03+
 # and v1.2.2 client
 # ---------------------------------------------------------------------------
-name: CI-Examples Jakarta
+name: CI-Examples Jakarta - v1.2.2
 
 on:
   workflow_dispatch:
@@ -73,6 +73,8 @@ jobs:
       shell: bash
       run: |
         git checkout v1.2.2
+        # Change the jib-maven-plugin as this version fails
+        sed -i.bak 's/<version.plugin.jib>3\.3\.0<\/version.plugin.jib>/<version.plugin.jib>3.4.3<\/version.plugin.jib>/' java/pom.xml
         go get google.golang.org/grpc/cmd/protoc-gen-go-grpc@v1.3.0
         COHERENCE_BASE_IMAGE=gcr.io/distroless/java17 COHERENCE_VERSION=${{ matrix.coherenceVersion }} PROFILES=,jakarta,-javax make clean generate-proto build-test-images test-cluster-startup test-examples
         make test-cluster-shutdown || true
