--- a/.github/workflows/examples-v1.2.2.yaml
+++ b/.github/workflows/examples-v1.2.2.yaml
@@ -73,6 +73,8 @@ jobs:
       shell: bash
       run: |
         git checkout v1.2.2
+        # Change the jib-maven-plugin as this version fails
+        sed -i.bak 's/<version.plugin.jib>3\.3\.0<\/version.plugin.jib>/<version.plugin.jib>3.4.3<\/version.plugin.jib>/' java/pom.xml
         go get google.golang.org/grpc/cmd/protoc-gen-go-grpc@v1.3.0
         COHERENCE_VERSION=${{ matrix.coherenceVersion }} PROFILES=,-jakarta,javax make clean generate-proto build-test-images test-cluster-startup test-examples
         make test-cluster-shutdown || true
