--- a/java/coherence-go-queues/pom.xml
+++ b/java/coherence-go-queues/pom.xml
@@ -50,10 +50,7 @@
     <profile>
       <id>javax</id>
       <activation>
-        <!-- This is a work-around for the fact that activeByDefault does not do what you'd think it should -->
-        <file>
-          <exists>.</exists>
-        </file>
+        <activeByDefault>false</activeByDefault>
       </activation>
       <dependencies>
         <dependency>
