--- a/.github/workflows/build-queues-1412.yaml
+++ b/.github/workflows/build-queues-1412.yaml
@@ -1,17 +1,20 @@
-# Copyright 2022, 2024 Oracle Corporation and/or its affiliates.
+# Copyright 2024 Oracle Corporation and/or its affiliates.
 # Licensed under the Universal Permissive License v 1.0 as shown at
 # https://oss.oracle.com/licenses/upl.
 
 # ---------------------------------------------------------------------------
-# Coherence Resolver Compatability Tests for Multiple Clusters
+# Coherence Go Client GitHub Actions CI build Queues - 14.1.2
 # ---------------------------------------------------------------------------
-name: Resolver Compatability Multiple
+name: CI Queues - 14.1.2
 
 on:
   workflow_dispatch:
   push:
     branches:
       - '*'
+  schedule:
+    # Every day at midnight
+    - cron: '0 0 * * *'
 
 jobs:
   build:
@@ -20,9 +23,8 @@ jobs:
       fail-fast: false
       matrix:
         coherenceVersion:
-          - 22.06.9
-          - 24.09
           - 14.1.2-0-0
+          - 14.1.2-0-1-SNAPSHOT
         go-version:
           - 1.19.x
           - 1.20.x
@@ -37,7 +39,12 @@ jobs:
       with:
         fetch-depth: 0
 
-    - name: Set up JDK
+    - name: Get Docker Images
+      shell: bash
+      run: |
+        docker pull gcr.io/distroless/java17
+
+    - name: Set up JDK 17 for Build
       uses: actions/setup-java@v4
       with:
         java-version: '17'
@@ -63,11 +70,13 @@ jobs:
       with:
         go-version: '${{ matrix.go-version }}'
 
-    - name: Discovery Compatability Tests
+    - name: E2E Queue Tests
+      env:
+        COH_VERSION: ${{ matrix.coherenceVersion }}
       shell: bash
       run: |
-        export COHERENCE_VERSION=${{ matrix.coherenceVersion }}
-        make clean test-clean test-resolver-cluster
+        go get google.golang.org/grpc/cmd/protoc-gen-go-grpc@v1.3.0
+        COHERENCE_BASE_IMAGE=gcr.io/distroless/java17 INCLUDE_LONG_RUNNING=true PROFILES=,-jakarta,javax,queues COHERENCE_VERSION=$COH_VERSION make clean generate-proto generate-proto-v1 build-test-images test-e2e-standalone-queues
 
     - uses: actions/upload-artifact@v4
       if: failure()
