--- a/.github/workflows/discovery-compatability-tests.yaml
+++ b/.github/workflows/discovery-compatability-tests.yaml
@@ -24,6 +24,8 @@ jobs:
           - 22.06.11-SNAPSHOT
           - 24.09
           - 24.09.1-SNAPSHOT
+          - 14.1.2-0-0
+          - 14.1.2-0-1-SNAPSHOT
         go-version:
           - 1.19.x
           - 1.20.x
