--- a/.github/workflows/examples.yaml
+++ b/.github/workflows/examples.yaml
@@ -22,6 +22,8 @@ jobs:
         coherenceVersion:
           - 22.06.11-SNAPSHOT
           - 22.06.10
+          - 14.1.2-0-0
+          - 14.1.2-0-1-SNAPSHOT
         go-version:
           - 1.19.x
           - 1.20.x
@@ -45,7 +47,7 @@ jobs:
     - name: Set up JDK
       uses: actions/setup-java@v4
       with:
-        java-version: '11'
+        java-version: '17'
         distribution: 'zulu'
 
     - name: Cache Go Modules
@@ -72,7 +74,7 @@ jobs:
       shell: bash
       run: |
         go get google.golang.org/grpc/cmd/protoc-gen-go-grpc@v1.3.0
-        COHERENCE_VERSION=${{ matrix.coherenceVersion }} PROFILES=,-jakarta,javax make clean generate-proto build-test-images test-cluster-startup test-examples
+        COHERENCE_BASE_IMAGE=gcr.io/distroless/java17 COHERENCE_VERSION=${{ matrix.coherenceVersion }} PROFILES=,-jakarta,javax make clean generate-proto generate-proto-v1 build-test-images test-cluster-startup test-examples
         make test-cluster-shutdown || true
 
     - uses: actions/upload-artifact@v4
