--- a/.github/workflows/build-queues-1412.yaml
+++ b/.github/workflows/build-queues-1412.yaml
@@ -1,4 +1,4 @@
-# Copyright 2024 Oracle Corporation and/or its affiliates.
+# Copyright 2024, 2025 Oracle Corporation and/or its affiliates.
 # Licensed under the Universal Permissive License v 1.0 as shown at
 # https://oss.oracle.com/licenses/upl.
 
@@ -24,6 +24,7 @@ jobs:
       matrix:
         coherenceVersion:
           - 14.1.2-0-0
+          - 14.1.2-0-1
           - 14.1.2-0-1-SNAPSHOT
         go-version:
           - 1.19.x
