--- a/.github/workflows/examples-jakarta-v1.2.2.yaml
+++ b/.github/workflows/examples-jakarta-v1.2.2.yaml
@@ -1,4 +1,4 @@
-# Copyright 2023, 2024 Oracle Corporation and/or its affiliates.
+# Copyright 2023, 2025 Oracle Corporation and/or its affiliates.
 # Licensed under the Universal Permissive License v 1.0 as shown at
 # https://oss.oracle.com/licenses/upl.
 
@@ -40,7 +40,7 @@ jobs:
     - name: Get Docker Images
       shell: bash
       run: |
-        docker pull gcr.io/distroless/java17
+        docker pull gcr.io/distroless/java17-debian12
         uname -a
 
     - name: Set up JDK
@@ -76,7 +76,7 @@ jobs:
         # Change the jib-maven-plugin as this version fails
         sed -i.bak 's/<version.plugin.jib>3\.3\.0<\/version.plugin.jib>/<version.plugin.jib>3.4.3<\/version.plugin.jib>/' java/pom.xml
         go get google.golang.org/grpc/cmd/protoc-gen-go-grpc@v1.3.0
-        COHERENCE_BASE_IMAGE=gcr.io/distroless/java17 COHERENCE_VERSION=${{ matrix.coherenceVersion }} PROFILES=,jakarta,-javax make clean generate-proto build-test-images test-cluster-startup test-examples
+        COHERENCE_BASE_IMAGE=gcr.io/distroless/java17-debian12 COHERENCE_VERSION=${{ matrix.coherenceVersion }} PROFILES=,jakarta,-javax make clean generate-proto build-test-images test-cluster-startup test-examples
         make test-cluster-shutdown || true
 
     - uses: actions/upload-artifact@v4
