--- a/.github/workflows/build-perf.yaml
+++ b/.github/workflows/build-perf.yaml
@@ -67,7 +67,7 @@ jobs:
       shell: bash
       run: |
         curl -sL https://raw.githubusercontent.com/oracle/coherence-cli/main/scripts/install.sh | bash
-        COHERENCE_VERSION=${{ matrix.coherenceVersion }} make test-perf
+        COHERENCE_CLIENT_REQUEST_TIMEOUT=200000 COHERENCE_VERSION=${{ matrix.coherenceVersion }} make test-perf
 
     - uses: actions/upload-artifact@v4
       if: failure()
