--- a/.github/workflows/streaming.yaml
+++ b/.github/workflows/streaming.yaml
@@ -66,7 +66,7 @@ jobs:
       with:
         go-version: '${{ matrix.go-version }}'
 
-    - name: Verify Examples
+    - name: Verify
       shell: bash
       run: |
         go get google.golang.org/grpc/cmd/protoc-gen-go-grpc@v1.3.0
